[project]
name = "my-fista"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "ruff>=0.15.11",
    "scienceplots>=2.2.1",
    "torch>=2.11.0",
    "ty>=0.0.32",
]
